fix: QB-247 dialog overflow on small devices

--- a/src/css/qlik-on-demand-reporting.css
+++ b/src/css/qlik-on-demand-reporting.css
@@ -112,3 +112,9 @@ img.npsod-img-list:hover{
 		width: 600px;
 	}
 }
+
+@media screen and (max-width: 640px), screen and (max-height: 480px) {
+	.lui-dialog.qlik-on-demand-reporting {
+		min-width: 320px;
+	}
+}
